--- a/templates/todo_index.html
+++ b/templates/todo_index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>TODO 程序</title>
-</head>
-<body>
-    <h1>TODO</h1>
-    <form action="/todo/add" method="post">
-        <input type="text" name="title" placeholder="请输入todo">
-        <br>
-        <button type="submit">添加</button>
-    </form>
-    <div>{{todos}}</div>
-</body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>web10 todo ajax</title>
+    </head>
+    <body>
+        <input id='id-input-todo'>
+        <button id='id-button-add'>add</button>
+        <div class="todo-list">
+        </div>
+        
+        <script src='/static?file=gua.js'></script>
+        <script src='/static?file=todo.js'></script>
+    </body>
 </html>
