新增首页模板

--- a/templates/todo_index.html
+++ b/templates/todo_index.html
@@ -10,7 +10,7 @@
         <div class="todo-list">
         </div>
         
-        <script src='/static?file=gua.js'></script>
+        <script src='/static?file=shu.js'></script>
         <script src='/static?file=todo.js'></script>
     </body>
 </html>
